<resources>
    <string name="app_name">MvvmApiCallCameraXDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_item">Second Item</string>
    <string name="first_item">First Item</string>
    <string name="camera">Camera</string>
    <string name="third_item">Third Item</string>
    <string name="fourth_item">Fourth Item</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_iamge">Upload Iamge</string>
    <string name="name">Alax</string>
    <string name="bio">Good things come to those who sweat.</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
</resources>