<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvProfile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="50dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/paymentlogo"
                    android:scaleType="fitCenter"
                    />
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/gray"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvProfile"/>

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:ellipsize="end"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:textColor="@color/gray"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/cvProfile"/>
            <ImageView
                android:id="@+id/ivPost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:src="@drawable/image"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvProfile"/>

            <TextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPost"
                app:drawableTopCompat="@drawable/ic_baseline_auto_awesome_24" />
            <TextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
               app:layout_constraintStart_toEndOf="@+id/tvLike"
                app:layout_constraintEnd_toStartOf="@+id/tvShare"
                app:layout_constraintTop_toBottomOf="@+id/ivPost"
                app:drawableTopCompat="@drawable/ic_baseline_auto_awesome_24" />
            <TextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPost"
                app:drawableTopCompat="@drawable/ic_baseline_auto_awesome_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>